feat(friend): add 'getFriendRequest' api, refactor the Response